// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save with id, load, delete 1`] = `
Object {
  "a": "aa",
  "b": "bb",
  "c": 1,
  "created": 1529539200,
  "id": "randomid123",
  "updated": 1529539200,
}
`;

exports[`save, load 1`] = `
Object {
  "a": "aa",
  "b": "bb",
  "c": 1,
  "created": 1529539200,
  "id": "randomDatastoreService1",
  "updated": 1529539200,
}
`;

exports[`streamQuery 1`] = `
Array [
  Object {
    "a": "aa",
    "b": "b1",
    "created": 1529539200,
    "id": "id1",
    "updated": 1529539200,
  },
  Object {
    "a": "aa",
    "b": "b2",
    "created": 1529539200,
    "id": "id2",
    "updated": 1529539200,
  },
]
`;
